--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="opcao2">opcao2</string>
     <string name="opcao3">opcao3</string>
     <string name="opcao4">opcao4</string>
+    <string name="urbantick">Urbantick</string>
 
     <string-array name="categorias">
         <item />
