--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
     <string name="metricas">Métricas</string>
     <string name="opcao1">opcao1</string>
     <string name="opcao2">opcao2</string>
-    <string name="opcao3">opcao3</string>
-    <string name="opcao4">opcao4</string>
+    <string name="opcao3">Desconectar</string>
+    <string name="opcao4"> </string>
     <string name="urbantick">Urbantick</string>
     <string name="maps">Mapa</string>
 
