Ajustes na tela do esqueceu senha e no login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Urbantick</string>
     <string name="txtEmail">E-mail</string>
     <string name="txtSenha">Senha</string>
+    <string name="txtRedefenirSenha">Recuperar senha</string>
     <string name="txtEntrar">Entrar</string>
     <string name="txtBuscar">Buscar</string>
     <string name="txtCategoria">Categoria</string>
