Atualização da tela principal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="buscar">Buscar Fornecedor</string>
     <string name="fornecedor">Lista de Fornecedores</string>
     <string name="mapa">Onde encontrar</string>
-    <string name="metricas">Métricas</string>
+    <string name="metricas">Favoritos</string>
     <string name="opcao1">opcao1</string>
     <string name="opcao2">opcao2</string>
     <string name="opcao3">Desconectar</string>
