--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,14 +12,17 @@
     <string name="app_nameCab">Urbantick</string>
     <string name="buscar">Buscar Fornecedor</string>
     <string name="fornecedor">Lista de Fornecedores</string>
-    <string name="mapa">Onde encontrar</string>
+    <string name="mapa">Onde nos encontrar</string>
     <string name="metricas">Métricas</string>
-    <string name="opcao1">opcao1</string>
-    <string name="opcao2">opcao2</string>
-    <string name="opcao3">Desconectar</string>
+    <string name="opcao1">Favoritos</string>
+    <string name="opcao2">Termos de Uso</string>
+    <string name="opcao3">Sair</string>
     <string name="opcao4"> </string>
-    <string name="urbantick">Urbantick</string>
+    <string name="urbantick">Menu</string>
     <string name="maps">Mapa</string>
+    <string name="BuscarFornecedor">Buscar Fornecedores</string>
+    <string name="OndeNosEncontrar">Onde nos Encontrar</string>
+
 
     <string-array name="categorias">
         <item />
